# stock-pricer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
stock_pricer/: __init__.py  fetch_stocks.py  streamlit_app.py
tests/: __init__.py  test_stock_predictor.py
